--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abcnews/kill-preview",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Kill the preview tools",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,14 @@
     "type": "git",
     "url": "git+https://github.com/abcnews/kill-preview.git"
   },
-  "contributors": [{ "name": "Simon Elvery" }, { "name": "Ash Kyd" }],
+  "contributors": [
+    {
+      "name": "Simon Elvery"
+    },
+    {
+      "name": "Ash Kyd"
+    }
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/abcnews/kill-preview/issues"
